tests/should_fail/syntax_while_non_bool_cond.nv
module main

// SHOULD FAIL: while-statement condition is not Bool (it is String)
fn test() {
    while "forever" {
        println("loop")
    }
}
test()
